[package]
name = "login-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
axum = "0.7.4"
axum-login = "0.14.0"
http = "1.1.0"
hyper = "1.2.0"
password-auth = "1.0.0"
serde = "1.0.197"
sqlx = { version = "0.7.4", features = ["postgres", "time", "runtime-tokio"] }
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.11.0", default-features = false }
tower-sessions-sqlx-store = { version = "0.11.0", features = ["postgres"] }
thiserror = "1.0.58"