[package]
name = "login-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra ={ version = "*", features = ["cookie"]}
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = {version = "*", features = ["postgres", "any", "runtime-tokio-native-tls"]}
time = "0.3.36"
cookie = "0.18.1"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
