[package]
name = "login-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["macros"] }
axum-extra ={ version = "*", features = ["cookie"]}
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = {version = "*", features = ["postgres", "any", "runtime-tokio-native-tls"]}
time = "0.3.36"
cookie = { version = "0.18.1", features = ["signed"] }
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
password-auth = "1.0.0"
